--- a/practica02css3 2/index.html
+++ b/practica02css3 2/index.html
@@ -3,12 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>practica 02 HTML5 +CSS3</title>
+	<link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
 	<header>
 		<img src="img/banner.png" alt="Banner">
-		<img src="img/granthams.png" alt="Granthams">
-		<img src="img/paint.png" alt="Paint">
+		<img src="img/granthams.png" id="granthams" alt="Granthams">
+		<img src="img/paint.png" id="paint" alt="Paint">
 		<input type="search" placeholder="Search"> 
 		<nav>
 			<ul>
@@ -20,12 +21,14 @@
 			</ul>
 		</nav>
 	</header>
-	<section>
+	<section id="primerseccion">
 		<article>
 			<img src="img/slide.jpg" alt="Slide">
 		</article>
 		<article>
-			<span>We can offer...</span>
+			<span class="colorrosa letragrande nito"> 
+				We can offer...
+			</span>
 			<ul>
 				<li>Highly Competitive Prices</li>
 				<li>Variable Data</li>
@@ -39,46 +42,48 @@
 		</article>
 		<img src="img/bg_offer.png" alt="Bg_offer">
 	</section>
-	<section>
+	<section id="segundaseccion">
 		<article>
-			<span>01772250207</span>
+			<span class="colorrosa letramediana nito">
+				01772250207
+			</span>
 		</article>
 	</section>
-	<section>
+	<section id="terceraseccion">
 		<article>
 			<img src="img/cerdito.png" alt="Cerdito">
-			<span>
-			Save this Spring
+			<span class="colorrosa letracomun nito">
+				Save this Spring
 			</span>
 			<br>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus itaque aspernatur incidunt omnis accusamus perspiciatis ullam animi assumenda placeat! Eaque aliquid expedita numquam corrupti architecto, voluptates aspernatur nemo sunt accusamus.
 			<p></p>
-			<span>
+			<span class="colorrosa nito">
 				Find out more
 			</span>
 		</article>
 		<article>
 			<img src="img/hoja.png" alt="Hoja">
-			<span>
-			ECO Friendly
+			<span class="colorverde letracomun nito">
+				ECO Friendly
 			</span>
 			<br>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque nulla velit repellat, praesentium numquam, dolorem deleniti vitae ipsa, dolor accusamus illum sequi? Sit eaque ullam temporibus, earum perspiciatis eveniet, alias.
 		</article>
 		<article>
 			<img src="img/new.png" alt="new">
-			<span>
+			<span class="colorazul letracomun nito">
 				Upload your file
 			</span>
 			<br>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam ducimus alias tempore, exercitationem inventore quo fugiat dolorem repellat. Obcaecati tenetur, sunt velit impedit quam harum debitis sequi minima amet alias.
 			<p></p>
-			<span>
+			<span class="colorazul">
 				Upload Your File Now
 			</span>
 		</article>
 		<article>
-			<span>
+			<span class="colorrosa letramediana">
 				Stay in touch
 			</span>
 			<br>
