--- a/practica02css3 2/index.html
+++ b/practica02css3 2/index.html
@@ -45,7 +45,7 @@
 	<section id="segundaseccion">
 		<article>
 			<span class="colorrosa letramediana nito">
-				01772250207
+				01772 250207
 			</span>
 		</article>
 	</section>
@@ -59,7 +59,7 @@
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus itaque aspernatur incidunt omnis accusamus perspiciatis ullam animi assumenda placeat! Eaque aliquid expedita numquam corrupti architecto, voluptates aspernatur nemo sunt accusamus.
 			<p></p>
 			<span class="colorrosa nito">
-				Find out more
+				Find out more...
 			</span>
 		</article>
 		<article>
@@ -82,7 +82,7 @@
 				Upload Your File Now
 			</span>
 		</article>
-		<article>
+		<article id="secc03art04">
 			<span class="colorrosa letramediana">
 				Stay in touch
 			</span>
@@ -91,7 +91,6 @@
 			<br>
 			<input type="email" placeholder="Email goes here">
 			<input type="button" value="send">
-
 		</article>
 	</section>
 </body>
